# SaaS-Blog-API

./: .env.example  .gitignore  LICENSE  README.md  cli.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: alembic.ini  alembic_runner.py  main.py
app/admin/: router.py  schema.py  utils.py
app/alembic/: env.py
app/auth/: auth.py  crud.py  dependency.py  google_auth.py  google_crud.py  google_routes.py  jwt_handler.py  models.py  router.py  routes.py  schemas.py  security.py  utils.py
app/blogs/: comment_crud.py  comment_routes.py  crud.py  models.py  router.py  routes.py  schema.py  utils.py
app/core/: app_factory.py  database.py  docs.py  lifespan.py  middleware.py  redis.py  routes.py  static_files.py
app/models/: blog_like_link.py  schema.py
app/notifications/: crud.py  models.py  notification_service.py  routes.py  schema.py  service.py
app/realtime/: events.py  manager.py  routes.py  test.html
app/schema/: schema.py
app/tasks/: treding_and_popular_update.py
app/tenants/: models.py
app/tests/: blog_tests.py
app/users/: crud.py  models.py  router.py  routes.py  schema.py
app/utils/: common_params.py  logger.py  rate_limiter.py  remove_image.py  save_image.py
auth/: auth.py  models.py  routes.py  schemas.py
blogs/: models.py  routes.py  schema.py
frontend/: README.md  next.config.mjs  package.json
tests/: auth_utils.py  conftest.py  test_auth.py  test_blogs.py  test_comments.py  test_db.py  test_new_blog_notification.py  test_notification.py  test_user.py  test_user_follow_and_notification.py  test_users.py
tests/auth/: test_logout.py  test_registration_and_login.py  test_token_operations.py  test_user_login.py  test_user_logout.py  test_user_registration.py
users/: models.py  routes.py
(+89 files in other folders)
